# python-gpt-education

./: README.md  bitbucket-pipelines.yml  pyproject.toml
educationGPT/application/ports/driven/: conversation_repository_port.py  gpt_client_port.py  prompt_repository_port.py  slack_repository_port.py
educationGPT/application/ports/driving/: chat_service_port.py  prompt_service_port.py  slack_service_port.py
educationGPT/application/services/: chat_service.py  prompt_service.py  slack_service.py
educationGPT/domain/entities/: chat.py  slack.py
educationGPT/driving/api/v1/slack/: slack_api_adapter.py  slack_api_mapper.py
educationGPT/driving/api/v1/slack/models/: slack_dto.py  slack_response_dto.py  slack_webhook_dto.py
external_files/: rudo-credentials.json
