[tool.poetry]
name = "educationGPT"
version = "0.1.0"
description = ""
authors = ["Aitor Poquet <aitorpoquet@rudo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.6"
psycopg2 = "^2.9"
celery = "^5.4"
gevent = "^24.11"
gunicorn = "^23.0"
redis = "^5.2"
boto3 = "^1.36"
pydantic = "^2.10"
fastapi = "0.109.2"
fastapi-cache2 = "0.2.2"
sqlalchemy = "2.0.27"
slackclient = "^2.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
